syntax = "proto3";
package  assesement_test_MicroServices;

import "google/protobuf/timestamp.proto";
import "commons.proto";
option go_package = "pb/";


service RoleService{
  rpc GetRoleById(ById) returns (RoleResponse);
  rpc UpdateRole(UpdateRoleRequest) returns (RoleResponse);
  rpc CreateRole(CreateRoleRequest) returns (RoleResponse);
  rpc DeleteRole(ById) returns (RoleResponse);
  rpc ListRoles(empty) returns (RoleResponseRepeated);
}

message Role {
  string id =1;
  string RoleCode = 2;
  string RoleName = 3;
  google.protobuf.Timestamp CreatedAt = 4;
  google.protobuf.Timestamp UpdatedAt = 5;
}

message RoleResponse{
  int64 code=1;
  string message=2;
  Role data=3;
}
message RoleResponseRepeated{
  int64 code=1;
  string message=2;
  repeated Role data=3;
}
message UpdateRoleRequest{
  string id=1;
  optional string RoleName=2;
}
message CreateRoleRequest{
  string RoleName=1;
}